--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,32 @@
-.App {
+body {
+  background: #bdc3c7;
+  padding: 40px;
+}
+.counter {
+  width: 300px;
+  margin: auto;
+  background: #9b59b6;
+  color: white;
+  padding: 20px;
   text-align: center;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
+.counter h1 {
+  margin: 0;
   padding: 20px;
-  color: white;
+  font-size: 36px;
 }
-
-.App-intro {
-  font-size: large;
+.counter button {
+  background: #f1c40f;
+  border: 0;
+  box-shadow: 0px 5px 0px darken(#f1c40f, 20%);
+  padding: 20px;
+  width: 100%;
+  outline: none;
+  border-radius: 3px;
+  color: darken(#8e44ad, 10%);
+  font-weight: bold;
+  font-size: 36px;
 }
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.counter button:hover {
+  background: #FF7D33;
 }
